--- a/Myassistant/app/src/main/res/layout/title_bar.xml
+++ b/Myassistant/app/src/main/res/layout/title_bar.xml
@@ -1,18 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal" android:layout_width="match_parent"
+    android:layout_width="match_parent"
     android:layout_height="50dp"
+    android:paddingLeft="10dp"
     android:background="@color/colorPrimary"
     >
 
     <Button
         android:id="@+id/tv_back"
-        android:layout_width="50dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:background="@android:drawable/ic_menu_revert"
-        android:textColor="@android:color/background_light"
-        />
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        android:layout_alignParentStart="true"
+        android:layout_centerVertical="true"
+        android:background="@drawable/beback"
+        android:textColor="@android:color/background_light" />
 
     <TextView
         android:id="@+id/tv_title"
@@ -30,8 +31,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
         android:background="#00b7c4c4"
-        android:text=""
         android:textColor="@android:color/background_light" />
 
 </RelativeLayout>
