--- a/Myassistant/app/src/main/res/layout/activity_select_event.xml
+++ b/Myassistant/app/src/main/res/layout/activity_select_event.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@drawable/touch_background">
 
     <include layout="@layout/title_bar"></include>
 
