--- a/Myassistant/app/src/main/res/layout/fragment2_clocklist.xml
+++ b/Myassistant/app/src/main/res/layout/fragment2_clocklist.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@drawable/touch_background">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -50,6 +51,11 @@
 
         <TextView
             android:id="@+id/eventid"
+            android:layout_width="0dp"
+            android:layout_height="0dp" />
+
+        <TextView
+            android:id="@+id/clockid"
             android:layout_width="0dp"
             android:layout_height="0dp" />
 
