--- a/Myassistant/app/src/main/res/layout/activity_account_graph.xml
+++ b/Myassistant/app/src/main/res/layout/activity_account_graph.xml
@@ -9,10 +9,20 @@
 
     <include layout="@layout/title_bar"></include>
 
-    <com.github.mikephil.charting.charts.PieChart
-        android:id="@+id/mPieChart"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"/>
+        android:layout_height="wrap_content">
+        <com.github.mikephil.charting.charts.PieChart
+            android:id="@+id/mPieChart"
+            android:layout_width="match_parent"
+            android:layout_height="300dp"/>
+    </LinearLayout>
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/account_graph_list"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+    </android.support.v7.widget.RecyclerView>
 
 </LinearLayout>
