--- a/Myassistant/app/src/main/res/layout/activity_account_graph.xml
+++ b/Myassistant/app/src/main/res/layout/activity_account_graph.xml
@@ -9,20 +9,71 @@
 
     <include layout="@layout/title_bar"></include>
 
-    <LinearLayout
+    <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-        <com.github.mikephil.charting.charts.PieChart
-            android:id="@+id/mPieChart"
+
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="300dp"/>
-    </LinearLayout>
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/account_graph_list"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="16dp">
 
-    </android.support.v7.widget.RecyclerView>
+                <RadioGroup
+                    android:id="@+id/graph_type"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginRight="16dp"
+                    android:gravity="center"
+                    android:orientation="horizontal">
+
+                    <RadioButton
+                        android:id="@+id/graph_out"
+                        android:layout_width="0dp"
+                        android:layout_height="28dp"
+                        android:layout_weight="1"
+                        android:background="@drawable/radiobutton_background"
+                        android:button="@null"
+                        android:gravity="center"
+                        android:text="支出"
+                        android:textColor="@drawable/radiobutton_textcolor"
+                        android:textSize="14sp" />
+
+                    <RadioButton
+                        android:id="@+id/graph_in"
+                        android:layout_width="0dp"
+                        android:layout_height="28dp"
+                        android:layout_weight="1"
+                        android:background="@drawable/radiobutton_background"
+                        android:button="@null"
+                        android:gravity="center"
+                        android:text="收入"
+                        android:textColor="@drawable/radiobutton_textcolor"
+                        android:textSize="14sp" />
+                </RadioGroup>
+
+            </LinearLayout>
+
+            <com.github.mikephil.charting.charts.PieChart
+                android:id="@+id/mPieChart"
+                android:layout_width="match_parent"
+                android:layout_height="300dp" />
+
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/account_graph_list"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+            </android.support.v7.widget.RecyclerView>
+        </LinearLayout>
+
+    </android.support.v4.widget.NestedScrollView>
 
 </LinearLayout>
