--- a/Myassistant/app/src/main/res/layout/sign_up.xml
+++ b/Myassistant/app/src/main/res/layout/sign_up.xml
@@ -6,16 +6,11 @@
     android:orientation="vertical">
     <include layout="@layout/title_bar"></include>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="30dp"
-        android:orientation="horizontal">
-
-    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
+        android:layout_marginTop="30dp"
         android:orientation="horizontal">
 
         <TextView
@@ -27,11 +22,7 @@
             android:layout_marginLeft="32dp"
             android:layout_marginRight="8dp"
             android:text="输入帐号："
-            android:textSize="18sp"
-            app:layout_constraintBottom_toTopOf="@+id/text4"
-            app:layout_constraintHorizontal_bias="0.571"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toLeftOf="@+id/username" />
+            android:textSize="18sp"/>
 
         <EditText
             android:id="@+id/username"
@@ -42,9 +33,7 @@
             android:layout_marginRight="32dp"
             android:layout_weight="1"
             android:ems="10"
-            android:inputType="textPersonName"
-            app:layout_constraintBottom_toTopOf="@+id/username"
-            app:layout_constraintRight_toRightOf="parent" />
+            android:inputType="textPersonName"/>
 
     </LinearLayout>
 
@@ -54,7 +43,6 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/text4"
             android:layout_width="wrap_content"
             android:layout_height="30dp"
             android:layout_gravity="center_horizontal"
@@ -63,13 +51,7 @@
             android:layout_marginRight="8dp"
             android:layout_marginTop="32dp"
             android:text="输入昵称："
-            android:textSize="18sp"
-            app:layout_constraintBottom_toTopOf="@+id/text1"
-            app:layout_constraintHorizontal_bias="0.571"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toLeftOf="@+id/name"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="1.0" />
+            android:textSize="18sp"/>
 
         <EditText
             android:id="@+id/name"
@@ -125,7 +107,6 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/text4"
             android:layout_width="wrap_content"
             android:layout_height="30dp"
             android:layout_gravity="center_horizontal"
@@ -133,11 +114,7 @@
             android:layout_marginLeft="32dp"
             android:layout_marginRight="8dp"
             android:text="确认密码："
-            android:textSize="18sp"
-            app:layout_constraintBottom_toTopOf="@+id/text4"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toLeftOf="@+id/password1" />
+            android:textSize="18sp" />
 
         <EditText
             android:id="@+id/password2"
@@ -156,23 +133,19 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
         android:orientation="horizontal">
 
         <Button
             android:id="@+id/sign"
             android:layout_width="match_parent"
             android:layout_height="45dp"
-            android:layout_marginBottom="200dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
             android:layout_weight="1"
             android:background="@android:color/holo_blue_light"
             android:text="注册"
             android:textColor="@android:color/background_light"
-            android:textSize="24sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent" />
+            android:textSize="24sp"/>
     </LinearLayout>
 
 </LinearLayout>
