--- a/Myassistant/app/src/main/res/layout/fragment3_account_item.xml
+++ b/Myassistant/app/src/main/res/layout/fragment3_account_item.xml
@@ -5,7 +5,8 @@
     android:layout_marginLeft="10dp"
     android:layout_marginRight="10dp"
     android:layout_marginTop="10dp"
-    android:layout_marginBottom="10dp">
+    android:layout_marginBottom="10dp"
+    android:background="@drawable/touch_background">
 
     <RelativeLayout
         android:layout_width="match_parent"
