--- a/Myassistant/app/src/main/res/layout/activity_add_event.xml
+++ b/Myassistant/app/src/main/res/layout/activity_add_event.xml
@@ -79,7 +79,7 @@
 
                 <EditText
                     android:id="@+id/data"
-                    android:layout_width="330dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:layout_weight="1"
